applications/production/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:latest
        ports:
        - containerPort: 8096
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: cache
          mountPath: /cache
        - name: movies
          mountPath: /movies
        - name: tv
          mountPath: /tv
        - name: music
          mountPath: /music
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: cache
        persistentVolumeClaim:
          claimName: jellyfin-cache
      - name: movies
        nfs:
          server: 192.168.1.114
          path: /var/mnt/media/movies
      - name: tv
        nfs:
          server: 192.168.1.114
          path: /var/mnt/media/tv
      - name: music
        nfs:
          server: 192.168.1.114
          path: /var/mnt/media/music
      - name: downloads
        nfs:
          server: 192.168.1.114
          path: /var/mnt/downloads
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:latest
        ports:
        - containerPort: 9696
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: prowlarr-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        ports:
        - containerPort: 7878
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: movies
          mountPath: /movies
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config
      - name: movies
        nfs:
          server: 192.168.1.114
          path: /var/mnt/media/movies
      - name: downloads
        nfs:
          server: 192.168.1.114
          path: /var/mnt/downloads
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        ports:
        - containerPort: 8989
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: tv
          mountPath: /tv
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-config
      - name: tv
        nfs:
          server: 192.168.1.114
          path: /var/mnt/media/tv
      - name: downloads
        nfs:
          server: 192.168.1.114
          path: /var/mnt/downloads
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
      - name: sabnzbd
        image: lscr.io/linuxserver/sabnzbd:latest
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sabnzbd-config
      - name: downloads
        nfs:
          server: 192.168.1.114
          path: /var/mnt/downloads
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:latest
        ports:
        - containerPort: 8082
          name: webui
        - containerPort: 6881
          name: tcp-port
          protocol: TCP
        - containerPort: 6881
          name: udp-port
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent-config
      - name: downloads
        nfs:
          server: 192.168.1.114
          path: /var/mnt/downloads
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - name: bazarr
        image: lscr.io/linuxserver/bazarr:latest
        ports:
        - containerPort: 6767
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: movies
          mountPath: /movies
        - name: tv
          mountPath: /tv
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: bazarr-config
      - name: movies
        nfs:
          server: 192.168.1.114
          path: /var/mnt/media/movies
      - name: tv
        nfs:
          server: 192.168.1.114
          path: /var/mnt/media/tv
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recyclarr
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recyclarr
  template:
    metadata:
      labels:
        app: recyclarr
    spec:
      containers:
      - name: recyclarr
        image: ghcr.io/recyclarr/recyclarr:latest
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: recyclarr-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
      - name: lidarr
        image: lscr.io/linuxserver/lidarr:latest
        ports:
        - containerPort: 8686
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: music
          mountPath: /music
        - name: downloads
          mountPath: /downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: lidarr-config
      - name: music
        nfs:
          server: 192.168.1.114
          path: /var/mnt/media/music
      - name: downloads
        nfs:
          server: 192.168.1.114
          path: /var/mnt/downloads
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
      - name: navidrome
        image: deluan/navidrome:latest
        ports:
        - containerPort: 4533
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
        - name: music
          mountPath: /music
          readOnly: true
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: navidrome-data
      - name: music
        nfs:
          server: 192.168.1.114
          path: /var/mnt/media/music
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
      - name: caddy
        image: caddy:latest
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        volumeMounts:
        - name: caddyfile
          mountPath: /etc/caddy/Caddyfile
          subPath: Caddyfile
        - name: data
          mountPath: /data
        - name: config
          mountPath: /config
      volumes:
      - name: caddyfile
        hostPath:
          path: c:\sources\private\MyHomelab\applications\production\jellyfin\caddy\Caddyfile
          type: File
      - name: data
        persistentVolumeClaim:
          claimName: caddy-data
      - name: config
        persistentVolumeClaim:
          claimName: caddy-config
