applications/production/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-media-stack
  namespace: jellyfin
spec:
  type: LoadBalancer
  ports:
  - port: 8096
    targetPort: 8096
    name: jellyfin
  - port: 9696
    targetPort: 9696
    name: prowlarr
  - port: 7878
    targetPort: 7878
    name: radarr
  - port: 8989
    targetPort: 8989
    name: sonarr
  - port: 8080
    targetPort: 8080
    name: sabnzbd
  - port: 8082
    targetPort: 8082
    name: qbittorrent
  - port: 6881
    targetPort: 6881
    protocol: TCP
    name: qbittorrent-tcp
  - port: 6881
    targetPort: 6881
    protocol: UDP
    name: qbittorrent-udp
  - port: 6767
    targetPort: 6767
    name: bazarr
  - port: 8686
    targetPort: 8686
    name: lidarr
  selector:
    app.kubernetes.io/part-of: jellyfin
