applications/production/jellyfin/httproutes-admin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: admin-apps
  namespace: jellyfin
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - admin.patrick-evers.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /bazarr
      backendRefs:
        - name: bazarr
          port: 6767
    - matches:
        - path:
            type: PathPrefix
            value: /lidarr
      backendRefs:
        - name: lidarr
          port: 8686
    - matches:
        - path:
            type: PathPrefix
            value: /prowlarr
      backendRefs:
        - name: prowlarr
          port: 9696
    - matches:
        - path:
            type: PathPrefix
            value: /radarr
      backendRefs:
        - name: radarr
          port: 7878
    - matches:
        - path:
            type: PathPrefix
            value: /sonarr
      backendRefs:
        - name: sonarr
          port: 8989
    - matches:
        - path:
            type: PathPrefix
            value: /qbittorrent
      backendRefs:
        - name: qbittorrent
          port: 8082
    - matches:
        - path:
            type: PathPrefix
            value: /sabnzbd
      backendRefs:
        - name: sabnzbd
          port: 8080
